<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WeWrite</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_text_editor">TextEditor</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="join_session">Join Session</string>
    <string name="create_session">Create Session</string>
    <string name="create_user">Create User</string>
    <color name="background">#00FFFF</color>
	 <color name="white">#FFFFFF</color>
	 <color name="yellow">#FFFF00</color>
	 <color name="fuchsia">#FF00FF</color>
	 <color name="red">#FF0000</color>
	 <color name="silver">#C0C0C0</color>
	 <color name="gray">#808080</color>
	 <color name="olive">#808000</color>
	 <color name="purple">#800080</color>
	 <color name="maroon">#800000</color>
	 <color name="aqua">#00FFFF</color>
	 <color name="lime">#00FF00</color>
	 <color name="teal">#008080</color>
	 <color name="green">#008000</color>
	 <color name="blue">#0000FF</color>
	 <color name="navy">#000080</color>
	 <color name="black">#000000</color>
    <string name="disconnect">Disconnect</string>

</resources>
